--- a/service1-main-app/openshift/hpa.yaml
+++ b/service1-main-app/openshift/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: service1-main-app-hpa
-  namespace: default
+  namespace: hemhal-dev
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
