--- a/service2-message-app/openshift/service.yaml
+++ b/service2-message-app/openshift/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service1-main-app
+  name: service2-message-app
   labels:
-    app: service1-main-app
+    app: service2-message-app
 spec:
   ports:
-    - name: http
+    - name: http 
       port: 80
       targetPort: 5000
   selector:
-    app: service1-main-app
+    app: service2-message-app
   type: ClusterIP
